card 6 gap fix

--- a/Project Filter/css/style.css
+++ b/Project Filter/css/style.css
@@ -97,7 +97,7 @@ body{
 .card6{
     grid-row: 7/10;
     grid-column:  8/12;
-    gap: 4rem;
+    gap: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -123,4 +123,3 @@ body{
     justify-content: center;
     align-items: center;
 }
-
